syntax="proto3";
package protos;

message MsgEnum {
    enum MsgCode {
        MSG_EMPTY = 0;//空协议，不要管
        HEART_BEAT = 5002;//心跳,请求和返回都是同一个
        C_USER_LOGIN = 1002; // 登录
        S_USER_LOGIN = 5003; // 登录成功
        C_SYNC_DATA = 1004;//同步数据
        S_SYNC_DATA = 5004;//同步数据
        C_RANK = 1005;//请求排行榜
        S_RANK = 5005;//请求排行榜
        C_REWARD_DAY_RANK = 1006;//领取每日奖励
        S_REWARD_DAY_RANK = 5006;//领取每日奖励
    }
}